--- a/project.config.json
+++ b/project.config.json
@@ -1,7 +1,7 @@
 {
 	"description": "项目配置文件。",
 	"setting": {
-		"urlCheck": true,
+		"urlCheck": false,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
@@ -29,9 +29,9 @@
 			"currentL": -1,
 			"list": []
 		},
-    "miniprogram": {
-      "current": -1,
-      "list": []
-    }
+		"miniprogram": {
+			"current": -1,
+			"list": []
+		}
 	}
 }
